--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -490,20 +490,10 @@ arb:
     backend/production:  #?
       index: "ادارة الانتاج" #?
       unvalidated_operations: "تحقيق الاعمال" #?
-    backend/production_chain_conveyors:
-      # edit: "Mettre à jour le convoyeur (%{source_id}-%{target_id})"
-      # new: "Ajouter un nouveau convoyeur dans la chaîne de production"
+    backend/production_chain_conveyors: #?
     backend/production_chain_work_center_uses: #?
-    backend/production_chain_work_centers:
-      # edit: "Modifier le centre d’opération\_: %{name}"
-      # new: "Ajouter un nouveau centre d’opération"
-      # play: "Éxécuter la chaîne de production\_: %{name}"
-      # show: "Centre d’opération\_: #{name}"
-    backend/production_chains:
-      # edit: "Modifier la chaîne de production\_: %{name}"
-      # index: "Chaînes de production"
-      # new: "Ajouter une nouvelle chaîne de production"
-      # show: "Chaîne de production\_: %{name}"
+    backend/production_chain_work_centers: #?
+    backend/production_chains: #?
     backend/products:
       edit: "تعديل المنتج : %{name}"
       index: "المنتجات"
@@ -740,10 +730,6 @@ arb:
     backend/product_stocks: "وضع الاسهم" #?
     backend/product_transfers: "عمليات نقل وخسارة الاسهم"
     backend/production: "المنتج" #?
-    # backend/production_chain_conveyors: "Convoyeurs de chaînes de production"
-    # backend/production_chain_work_center_uses: "Utilisation des ateliers de chaînes de production"
-    # backend/production_chain_work_centers: "Atelier de chaînes de production"
-    # backend/production_chains: "Chaînes de production"
     backend/products: "المنتجات"
     backend/products_natures: "المنتجات" #?
     # backend/professions: "Professions"
