--- a/config/locales/jpn/rights.yml
+++ b/config/locales/jpn/rights.yml
@@ -2,7 +2,6 @@ jpn:
   rights:
     # backup_company: "Effectuer/Recharger des sauvegardes"
     # bookkeep: "Basculer les opérations commerciales en comptabilité"
-    # build_production_chains: "Construire des chaînes de production"
     # cancel_sales_invoices: "Faire des avoirs"
     # change_prices_on_sales: "Changer les prix au moment des ventes"
     # close_journals: "Clôturer et déclôturer des journaux"
@@ -46,6 +45,7 @@ jpn:
     # manage_land_parcels: "Gérer les îlots"
     # manage_listings: "Gérer les extractions"
     # manage_mandates: "Gérer les responsabilités"
+    # manage_meetings: "Gérer les évènements"
     # manage_observations: "Gérer les observations"
     # manage_operations: "Gérer les travaux"
     # manage_outgoing_delivery_modes: "Gérer les types de livraison"
@@ -54,6 +54,7 @@ jpn:
     # manage_prices: "Gérer les prix"
     # manage_product_categories: "Gérer les catégories de produits"
     # manage_product_price_listings: "Gérer les listes de prix"
+    # manage_productions: "Gérer les productions"
     # manage_products: "Gérer les produits"
     # manage_purchase_natures: "Gérer les types d’achat"
     # manage_purchases: "Gérer les achats"
@@ -65,5 +66,4 @@ jpn:
     # manage_users: "Gérer les utilisateurs"
     # merge_entities: "Fusionner les fiches clients/fournisseurs"
     # __minimum__: "Accéder au minimum vital"
-    # __public__: "Public access"
-    # use_production_chains: "Utiliser les chaînes de production"
+    # __public__: "Accès public"
