--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -2081,10 +2081,7 @@ arb:
         # gain: "Gain"
         # transfer: "Transfert"
         # waste: "Perte"
-    production_chain_work_center:
-      nature:
-        # input: "Une entrée, plusieurs sorties"
-        # output: "Plusieurs entrées, une sortie"
+    production_chain_work_center: #?
     products_nature:
       nature:
         # product: "Produit"
