--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -1623,10 +1623,10 @@ eng:
         gain: "Gain"
         transfer: "Transfer"
         waste: "Loss"
-    production_chain_work_center:
-      nature:
-        input: "One in, many out"
-        output: "Many in, one out"
+    production_chain_work_center:  #?
+      nature: #?
+        input: "One in, many out" #?
+        output: "Many in, one out" #?
     products_nature:
       nature:
         product: "Product"
