--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -1156,6 +1156,7 @@ fra:
     stopped_at: "Arrêté à"
     stopped_on: "Arrêté le"
     storable: "Gérer les stocks"
+    # storage: "Storage"
     story: "Historique"
     string_value: "Valeur textuelle"
     subdir: "Sous-répertoire" #?
