refactorize Product inheritance (medicines,organic matter) in progress.

--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -239,12 +239,12 @@ jpn:
       # new: "Ajouter une nouvelle parcelle culturale"
       # show: "Parcelle culturale %{name}"
     backend/land_parcels:
-      # divide: "Diviser la parcelle unitaire\_: %{name}"
-      # edit: "Modifier la parcelle unitaire\_: %{name}"
-      # index: "Parcelles unitaires"
-      # merge: "Fusionner des parcelles unitaires"
-      # new: "Ajouter une nouvelle parcelle unitaire"
-      # show: "Parcelle unitaire %{name}"
+      # divide: "Diviser la parcelle\_: %{name}"
+      # edit: "Modifier la parcelle\_: %{name}"
+      # index: "Parcelles"
+      # merge: "Fusionner des parcelles"
+      # new: "Ajouter une nouvelle parcelle"
+      # show: "Parcelle %{name}"
     backend/legal_entities: #?
     backend/listing_nodes:
       # edit: "Modifier le nœud"
@@ -271,6 +271,7 @@ jpn:
       # new: "Nouvelle matière"
       # picture: "Visuel"
       # show: "Matière\_: %{name}"
+    backend/medicines: #?
     backend/meeting_natures: #?
     backend/meetings:
       # edit: "Modifier un évènement"
@@ -291,6 +292,7 @@ jpn:
       # new: "Créer un nouveau travail"
       # show: "Détails du travail"
       # unvalidateds: "Travaux non validés"
+    backend/organic_matters: #?
     backend/outgoing_deliveries:
       # edit: "Modifier la livraison sortante\_: %{number}"
       # index: "Livraisons sortantes"
@@ -962,9 +964,9 @@ jpn:
       # items: "Lignes d’écritures"
       # mixed: "Écritures et lignes"
     # journals: "Journaux"
-    # land_parcel_name: "Îlot"
-    # land_parcel_update: "Modifier l’îlot"
-    # land_parcels: "Îlots"
+    # land_parcel_name: "Parcelle"
+    # land_parcel_update: "Modifier la parcelle"
+    # land_parcels: "Parcellaire"
     # last_animals: "Dernières naissances"
     # last_clients: "Derniers clients"
     # last_computed_balance: "Dernière balance calculée"
@@ -1013,6 +1015,7 @@ jpn:
     # map: "Carte"
     # measure_options: "Indicateur de type mesure"
     # medical_informations: "Informations médicales"
+    # medicines: "Remèdes"
     # meeting: "Lieu(x) de rencontre"
     # meetings: "Évènements"
     menu:  #?
