--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -301,10 +301,10 @@ arb:
       # new: "Ajouter une nouvelle parcelle culturale"
       # show: "Parcelle culturale %{name}"
     backend/land_parcels:
-      # divide: "Diviser la parcelle unitaire\_: %{name}"
+      # divide: "Diviser la parcelle\_: %{name}"
       edit: "تعديل النظام : %{name}"
       index: "انظمة"
-      # merge: "Fusionner des parcelles unitaires"
+      # merge: "Fusionner des parcelles"
       new: "اضافة نظام جديد"
       show: "نظام %{name}"
     backend/legal_entities: #?
@@ -342,6 +342,7 @@ arb:
       # new: "Nouvelle matière"
       # picture: "Visuel"
       # show: "Matière\_: %{name}"
+    backend/medicines: #?
     backend/meeting_natures: #?
     backend/meetings:
       # edit: "Modifier un évènement"
@@ -365,6 +366,7 @@ arb:
       new: "انشاء عمل جديد"
       show: "تفاصيل العمل %{name}"
       unvalidateds: "تحقيق الاعمال"
+    backend/organic_matters: #?
     backend/outgoing_deliveries:
       edit: "تعديل التسليم"
       # index: "Livraisons sortantes"
@@ -1233,6 +1235,7 @@ arb:
     # map: "Carte"
     # measure_options: "Indicateur de type mesure"
     # medical_informations: "Informations médicales"
+    # medicines: "Remèdes"
     meeting: "المقابلة(X)مكان"
     # meetings: "Évènements"
     menu:  #?
