--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -33,6 +33,11 @@ fra:
       index: "Groupes d'animaux"
       new: "Nouveau groupe d'animaux"
       show: "Groupe\_: %{name}"
+    backend/animal_medicines:
+      edit: "Modifier le produit vétérinaire\_: %{name}"
+      index: "Produits vétérinaires"
+      new: "Nouveau produit vétérinaire"
+      show: "Produit vétérinaire\_: %{name}"
     backend/animals:
       edit: "Modifier l'animal\_: %{name}"
       index: "Animaux"
@@ -58,10 +63,10 @@ fra:
       point: "Pointer le relevé N°%{number}"
       show: "Relevé de compte N°%{number}"
     backend/buildings:
-      edit: "Modifier une installation"
-      index: "Installations (bâtiments, réservoir)"
-      new: "Ajout d’une installation"
-      show: "Détail de l'installation\_: %{name}"
+      edit: "Modifier un bâtiment"
+      index: "Bâtiments"
+      new: "Ajout d’un bâtiment"
+      show: "Détail du bâtiment\_: %{name}"
     backend/campaigns:
       edit: "Campagne\_: %{name}"
       index: "Campagnes"
@@ -358,6 +363,11 @@ fra:
       # index: "Index backend/person"
       # new: "New backend/person"
       # show: "Show backend/person"
+    backend/plant_medicines:
+      edit: "Modifier le produit phytosanitaire\_: %{name}"
+      index: "Produits phytosanitaires"
+      new: "Nouveau produit phytosanitaire"
+      show: "Produit phytosanitaire\_: %{name}"
     backend/plants:
       edit: "Modifier la culture\_: %{name}"
       index: "Cutures"
@@ -533,6 +543,11 @@ fra:
       edit: "Configuration"
       import: "Importer des données"
       restore: "Restaurer une sauvegarde"
+    backend/settlements:
+      edit: "Modifier l'installation\_: %{name}"
+      index: "Installations"
+      new: "Nouvelle installation"
+      show: "Installation\_: %{name}"
     backend/snippets:
       # toggle: "Toggle backend/snippet"
     backend/subscription_natures:
@@ -691,6 +706,7 @@ fra:
     backend/sales: "Ventes"
     backend/sequences: "Séquences"
     backend/settings: "Paramètres"
+    # backend/settlements: "Backend/settlements"
     # backend/snippets: "Backend/snippets"
     backend/subscription_natures: "Types d’abonnements"
     backend/subscriptions: "Abonnements"
@@ -798,7 +814,7 @@ fra:
       cares: "Soins réalisés sur le lot"
     animal_identification: "Identification animale"
     animal_pie: "Animaux par lot"
-    animal_production: "Productions animales"
+    animal_productions: "Productions animales"
     animal_tabbox:
       cares: "Soins"
       childrens: "Enfants"
@@ -1304,7 +1320,8 @@ fra:
     placeholder: "Espace réservé"
     places: "Lieux"
     planned_on: "Date prévisionnelle"
-    plant_production: "Productions végétales"
+    plant_medicines: "Produits phytosanitaires"
+    plant_productions: "Productions végétales"
     play: "Éxécuter"
     please_wait: "Merci de patienter..."
     preferences: "Préférences"
