--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -33,6 +33,7 @@ jpn:
       # index: "Groupes d'animaux"
       # new: "Nouveau groupe d'animaux"
       # show: "Groupe\_: %{name}"
+    backend/animal_medicines: #?
     backend/animals:
       # edit: "Modifier l'animal\_: %{name}"
       # index: "Animaux"
@@ -57,10 +58,10 @@ jpn:
       # point: "Pointer le relevé N°%{number}"
       # show: "Relevé de compte N°%{number}"
     backend/buildings:
-      # edit: "Modifier une installation"
-      # index: "Installations (bâtiments, réservoir)"
-      # new: "Ajout d’une installation"
-      # show: "Détail de l'installation\_: %{name}"
+      # edit: "Modifier un bâtiment"
+      # index: "Bâtiments"
+      # new: "Ajout d’un bâtiment"
+      # show: "Détail du bâtiment\_: %{name}"
     backend/campaigns:
       # edit: "Campagne\_: %{name}"
       # index: "Campagnes"
@@ -271,7 +272,11 @@ jpn:
       # new: "Nouvelle matière"
       # picture: "Visuel"
       # show: "Matière\_: %{name}"
-    backend/medicines: #?
+    backend/medicines:
+      # edit: "Modifier le médicaments\_: %{name}"
+      # index: "Médicaments"
+      # new: "Nouveau médicaments"
+      # show: "Médicament\_: %{name}"
     backend/meeting_natures: #?
     backend/meetings:
       # edit: "Modifier un évènement"
@@ -292,7 +297,11 @@ jpn:
       # new: "Créer un nouveau travail"
       # show: "Détails du travail"
       # unvalidateds: "Travaux non validés"
-    backend/organic_matters: #?
+    backend/organic_matters:
+      # edit: "Modifier la matière organique\_: %{name}"
+      # index: "Matières organiques"
+      # new: "Nouvelle matière organique"
+      # show: "Matière organique\_: %{name}"
     backend/outgoing_deliveries:
       # edit: "Modifier la livraison sortante\_: %{number}"
       # index: "Livraisons sortantes"
@@ -313,6 +322,7 @@ jpn:
       # show: "Décaissement n°%{number} pour %{payee}"
     backend/people: #?
     backend/places: #?
+    backend/plant_medicines: #?
     backend/plants:
       # edit: "Modifier la culture\_: %{name}"
       # index: "Cutures"
@@ -457,6 +467,11 @@ jpn:
       # edit: "Configuration"
       # import: "Importer des données"
       # restore: "Restaurer une sauvegarde"
+    backend/settlements:
+      # edit: "Modifier l'installation\_: %{name}"
+      # index: "Installations"
+      # new: "Nouvelle installation"
+      # show: "Installation\_: %{name}"
     backend/snippets: #?
     backend/subscription_natures:
       # edit: "Modifier le type d’abonnement\_: %{name}"
@@ -676,7 +691,9 @@ jpn:
       # animals: "Animaux du lot"
       # cares: "Soins réalisés sur le lot"
     # animal_identification: "Identification animale"
+    # animal_medicines: "Médicaments vétérinaires"
     # animal_pie: "Animaux par lot"
+    # animal_productions: "Productions animales"
     animal_tabbox:
       # cares: "Soins"
       # childrens: "Enfants"
@@ -1188,6 +1205,8 @@ jpn:
     # placeholder: "Espace réservé"
     # places: "Lieux"
     # planned_on: "Date prévisionnelle"
+    # plant_medicines: "Produits phytosanitaires"
+    # plant_productions: "Productions végétales"
     # play: "Éxécuter"
     # please_wait: "Merci de patienter..."
     # preferences: "Préférences"
